[tool.mypy]
# TODO: widen range of files as we fix issues
namespace_packages = true

[tool.black]
line-length = 99
target-version = ['py38']

[tool.poetry]
name = "dbt-meshify"
version = "0.1.0"
description = "a package to upgrade dbt packages to the dbt mesh framework"
authors = [
    "Dave Connors <dave.connors@fishtownanalytics.com>",
    "Grace Goheen <grace.goheen@dbtlabs.com>"
]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "dbt_meshify"}]

[tool.poetry.dependencies]
python = "^3.9"
dbt-core = "^1.5.0rc1"
click = "^8.1.3"
dbt-postgres = { version = "^1.5.0rc1", optional = true }
dbt-duckdb = "^1.5.0"
black = "^23.3.0"
mypy = "^1.3.0"
isort = "^5.12.0"
pre-commit = "^3.3.1"

[tool.poetry.extras]
postgres = ['dbt-postgres']

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
pytest = "^7.3.1"
dbt-duckdb = "^1.5.0"
mkdocs = "^1.4.3"
mkdocs-click = "^0.8.0"
mkdocs-material = "^9.1.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dbt-meshify = "dbt_meshify.main:cli"
